tests/NormalTests/paczka1/fuzzy1/90751598.err
Error in line 4: q3h S679 79,2
Error in line 9: q3h S535 24,9
Error in line 19: 01DZEM A426 32,8
Error in line 27: 01DZEM S922 45,2
Error in line 31: DIgEXTGk3I7 A426 44,9
